Create Authentication controller with security

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/certificates
+spring.datasource.url=jdbc:postgresql://localhost:5432/sensordb
 spring.datasource.username=nombran
 spring.datasource.password=123654
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,7 +7,7 @@ server.port=8081
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
