--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sensordb
-spring.datasource.username=nombran
-spring.datasource.password=123654
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/sensordb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:nombran}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:123654}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port=8081
